# pyhyp

./: .gitignore  404.html  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
src/pyhyp/: pythag.py
tests/: test_pyhyp.py
